<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_baidu_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/changeble_top_corner5_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/BaiduMap"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />

            <TextView
                android:id="@+id/tv_baidu_map_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/changeble_no_corner5_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/BaiduMapInfo"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />

            <TextView
                android:id="@+id/tv_baidu_map_navi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/changeble_no_corner5_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/BaiduMapNavi"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />

            <TextView
                android:id="@+id/tv_baidu_map_trace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/changeble_no_corner5_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/BaiduMapTrace"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />

            <TextView
                android:id="@+id/tv_baidu_map_trail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/changeble_no_corner5_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/BaiduMapTrail"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />

            <TextView
                android:id="@+id/tv_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/changeble_bottom_corner5_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/bottom"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>